<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.dev.h2.hr_candidates.activity.ViewPersonActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivViewPersonPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimaryDark"
                android:maxHeight="200dp"
                android:maxWidth="120dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/rating" />

            <RatingBar
                android:id="@+id/ratingBarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:numStars="5"
                android:stepSize="0.5"
                android:isIndicator="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvPrintName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/surname" />

            <TextView
                android:id="@+id/tvPrintSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/date_of_birth" />

            <TextView
                android:id="@+id/tvPrintDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/qualifications" />

            <TextView
                android:id="@+id/tvPrintQualifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Past work experience" />

            <TextView
                android:id="@+id/tvPrintWorkExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/address" />

            <TextView
                android:id="@+id/tvPrintAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/telephone_number" />

            <TextView
                android:id="@+id/tvPrintTelNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp"
                android:autoLink="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/e_mail_address" />

            <TextView
                android:id="@+id/tvPrintEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Interview notes" />

            <TextView
                android:id="@+id/tvPrintInterviewNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/editTextColor"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btPersonEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit" />

                <Button
                    android:id="@+id/btPersonGoBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
